--- a/100-Prozent-Ausspielungen/Sprint-AB-8.4-Ersparnisse-im-Warenkorb-(mobile)/variation-01/style.less
+++ b/100-Prozent-Ausspielungen/Sprint-AB-8.4-Ersparnisse-im-Warenkorb-(mobile)/variation-01/style.less
@@ -6,6 +6,10 @@
 
 /* DEFINE VARIATION CSS */
 
+.loyaltyPoints {
+    margin-left: auto;
+}
+
 // .kk_inner_bottom_checkout_wrapper {
 //     > :last-child {
 //         > :first-child {
